--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Duyen's Personal Site</title>
+
+    <style>
+        body {background-color: lightpink;}
+    </style>
   </head>
+  
   <body>
+      
+  </body>
     <table cellspacing="20">
       <tr>
         <td>
